# scratch-cpp

./: .gitignore  CMakeLists.txt  README.md
src/c4/: CMakeLists.txt  ai.cc  ai.h  boardstate.cc  boardstate.h  constants.h  functions.cc  functions.h  globals.cc  globals.h  main.cc
src/connect4/: CMakeLists.txt  ai.cpp  ai.h  app.cpp  app.h  board.cpp  board.h  board2.cpp  board2.h  constants.h  helpers.cpp  helpers.h  main.cpp  transtable.h
src/helloworld/: CMakeLists.txt  main.cpp
src/tictactoe/: CMakeLists.txt  ai.cpp  ai.h  app.cpp  app.h  board.cpp  board.h  constants.h  main.cpp
